--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>JSON Generator</title>
     <meta name="description" content="Web application for generating JSON object">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <!-- Assets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
